improve: add translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -176,5 +176,29 @@
   "Annual goal: 5000 words, 400 remaining": "Annual goal: {words} words, {remaining} remaining",
   "Words you have already encountered": "Words you have already encountered",
   "Monthly goal: 400 words, 200 remaining": "Monthly goal: {words} words, {remaining} remaining",
-  "Today's goal: 14 words, 0 remaining": "Today's goal: {words} words, {remaining} remaining"
+  "Today's goal: 14 words, 0 remaining": "Today's goal: {words} words, {remaining} remaining",
+  "Progress towards fluency": "Progress towards fluency",
+  "Welcome!! {userFullName}": "Welcome!! {userFullName}",
+  "Continue where you left off?":"Continue where you left off?",
+  "Your performance": "Your performance",
+  "Words with a score above or equal to 95 are represented in <g>green</g>": "Words with a score above or equal to 95 are represented in <g>green</g>",
+  "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>": "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>",
+  "Words with a score between 0 and 49 points are represented in <r>red</r>": "Words with a score between 0 and 49 points are represented in <r>red</r>",
+  "Earn points by talking to the petutors": "Earn points by talking to the petutors",
+  "Our AI Petutors": "Our AI Petutors",
+  "The AI Petutor is a trained learning model designed to provide teaching and guidance": "The AI Petutor is a trained learning model designed to provide teaching and guidance.",
+  "Recommended": "Recommended",
+  "Hello, I'm Ioua": "Hello, I'm Ioua.",
+  "With me, you can say whatever you want": "With me, you can say whatever you want.",
+  "Hello, I'm Luna": "Hello, I'm Luna.",
+  "Do you want to learn how to communicate in an interview?": "Do you want to learn how to communicate in an interview?",
+  "Hello, I'm Ukki": "Hello, I'm Ukki.",
+  "Do you want to learn how to communicate in a restaurant?": "Do you want to learn how to communicate in a restaurant?",
+  "New AI Petutors": "New AI Petutors",
+  "Select a new language to learn": "Select a new language to learn",
+  "New language": "New language",
+  "You are {value}% closer to becoming fluent": "You are {value}% closer to becoming fluent",
+  "Shortly": "Shortly",
+  "Soon, I will be able to share knowledge about history with you": "Soon, I will be able to share knowledge about history with you.",
+  "In due course, I will be available to share knowledge about technology with you": "In due course, I will be available to share knowledge about technology with you."
 }
