--- a/locales/es.json
+++ b/locales/es.json
@@ -176,5 +176,29 @@
     "Your goal is to learn 5000 words this year, 400 words remaining": "Tu objetivo es aprender {wordsPerYear} <questionHelp></questionHelp> palabras este año, quedan {wordsPerYearRemaining} palabras.",
     "For fluency, you may need to learn from 5000 to 10000 words": "Para fluidez, es posible que necesites aprender de {wordsMin} a {wordsMax} palabras.",
     "It's only 14 words a day, you can do it!": "¡Son solo {words} palabras al día, tú puedes hacerlo!",
-    "All the words you learned in the year 2024": "Todas las palabras que aprendiste en el año {year}"
+    "All the words you learned in the year 2024": "Todas las palabras que aprendiste en el año {year}",
+    "Progress towards fluency": "Progreso hacia la fluidez",
+    "Welcome!! {userFullName}": "¡¡Bienvenido!! {userFullName}",
+    "Continue where you left off?": "¿Continuar donde lo dejaste?",
+    "Your performance": "Tu desempeño",
+    "Words with a score above or equal to 95 are represented in <g>green</g>": "Las palabras con una puntuación de 95 o superior se representan en <g>verde</g>",
+    "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>": "Las palabras con una puntuación de 50 puntos o más pero menos de 95 puntos se representan en <y>amarillo</y>",
+    "Words with a score between 0 and 49 points are represented in <r>red</r>": "Las palabras con una puntuación entre 0 y 49 puntos se representan en <r>rojo</r>",
+    "Earn points by talking to the petutors": "Gana puntos hablando con los petutores",
+    "Our AI Petutors": "Nuestros petutores de IA",
+    "The AI Petutor is a trained learning model designed to provide teaching and guidance": "El Petutor de IA es un modelo de aprendizaje entrenado diseñado para proporcionar enseñanza y orientación",
+    "Recommended": "Recomendado",
+    "Hello, I'm Ioua": "Hola, soy Ioua",
+    "With me, you can say whatever you want": "Conmigo puedes decir lo que quieras.",
+    "Hello, I'm Luna": "Hola, soy Luna",
+    "Do you want to learn how to communicate in an interview?": "¿Quieres aprender cómo comunicarte en una entrevista?",
+    "Hello, I'm Ukki": "Hola, soy Ukki",
+    "Do you want to learn how to communicate in a restaurant?": "¿Quieres aprender cómo comunicarte en un restaurante?",
+    "New AI Petutors": "Nuevos petutores de IA",
+    "Select a new language to learn": "Seleccione un nuevo idioma para aprender",
+    "New language": "Nuevo idioma",
+    "You are {value}% closer to becoming fluent": "Você está {value}% mais perto de se tornar fluente",
+    "Shortly": "Em breve",
+    "Soon, I will be able to share knowledge about history with you": "Em breve, poderei compartilhar conhecimentos sobre história com você",
+    "In due course, I will be available to share knowledge about technology with you": "No devido tempo, estarei disponível para compartilhar conhecimentos sobre tecnologia com você."
 }
