--- a/locales/fr.json
+++ b/locales/fr.json
@@ -176,5 +176,29 @@
     "Annual goal: 5000 words, 400 remaining": "Objectif annuel : {words} mots, {remaining} restants",
     "Words you have already encountered": "Mots que vous avez déjà rencontrés",
     "Monthly goal: 400 words, 200 remaining": "Objectif mensuel : {words} mots, {remaining} restants",
-    "Today's goal: 14 words, 0 remaining": "Objectif du jour : {words} mots, {remaining} restants"
+    "Today's goal: 14 words, 0 remaining": "Objectif du jour : {words} mots, {remaining} restants",
+    "Progress towards fluency": "Progress vers la maîtrise",
+    "Welcome!! {userFullName}": "Bienvenue !! {userFullName}",
+    "Continue where you left off?": "Continuer là où vous vous étiez arrêté ?",
+    "Your performance": "Votre performance",
+    "Words with a score above or equal to 95 are represented in <g>green</g>": "Les mots avec un score supérieur ou égal à 95 sont représentés en <g>vert</g>",
+    "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>": "Les mots avec un score de 50 points ou plus mais moins de 95 points sont représentés en <y>jaune</y>",
+    "Words with a score between 0 and 49 points are represented in <r>red</r>": "Les mots avec un score entre 0 et 49 points sont représentés en <r>rouge</r>",
+    "Earn points by talking to the petutors": "Gagnez des points en parlant aux Petutors",
+    "Our AI Petutors": "Nos Petutors AI",
+    "The AI Petutor is a trained learning model designed to provide teaching and guidance": "Le Petutor AI est un modèle d'apprentissage entraîné conçu pour fournir un enseignement et des conseils",
+    "Recommended": "Recommandé",
+    "Hello, I'm Ioua": "Bonjour, je suis Ioua",
+    "With me, you can say whatever you want": "Avec moi, vous pouvez dire ce que vous voulez.",
+    "Hello, I'm Luna": "Bonjour, je suis Luna",
+    "Do you want to learn how to communicate in an interview?": "Voulez-vous apprendre à communiquer lors d'un entretien?",
+    "Hello, I'm Ukki": "Bonjour, je suis Ukki",
+    "Do you want to learn how to communicate in a restaurant?": "Voulez-vous apprendre à communiquer dans un restaurant?",
+    "New AI Petutors": "Nouveaux Petutors AI",
+    "Select a new language to learn": "Sélectionnez une nouvelle langue à apprendre",
+    "New language": "Nouvelle langue",
+    "You are {value}% closer to becoming fluent": "Vous êtes à {value}% de devenir couramment",
+    "Shortly": "Bientôt",
+    "Soon, I will be able to share knowledge about history with you": "Bientôt, je pourrai partager des connaissances historiques avec vous.",
+    "In due course, I will be available to share knowledge about technology with you": "En temps voulu, je serai disponible pour partager des connaissances sur la technologie avec vous."
 }
