--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -176,5 +176,29 @@
     "Annual goal: 5000 words, 400 remaining": "Obiettivo annuale: {words} parole, ne rimangono ancora {remaining}",
     "Words you have already encountered": "Parole che hai già incontrato",
     "Monthly goal: 400 words, 200 remaining": "Obiettivo mensile: {words} parole, ne rimangono ancora {remaining}",
-    "Today's goal: 14 words, 0 remaining": "Oggi obiettivo: {words} parole, ne rimangono ancora {remaining}"
+    "Today's goal: 14 words, 0 remaining": "Oggi obiettivo: {words} parole, ne rimangono ancora {remaining}",
+    "Progress towards fluency": "Progresso verso la fluidità",
+    "Welcome!! {userFullName}": "Benvenuto!! {userFullName}",
+    "Continue where you left off?": "Continuare da dove hai smesso?",
+    "Your performance": "La tua performance",
+    "Words with a score above or equal to 95 are represented in <g>green</g>": "Le parole con un punteggio pari o superiore a 95 sono rappresentate in <g>verde</g>",
+    "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>": "Le parole con un punteggio di 50 punti o più ma inferiore a 95 punti sono rappresentate in <y>giallo</y>",
+    "Words with a score between 0 and 49 points are represented in <r>red</r>": "Le parole con un punteggio compreso tra 0 e 49 sono rappresentate in <r>rosso</r>",
+    "Earn points by talking to the petutors": "Guadagna punti parlando con i petutor",
+    "Our AI Petutors": "I nostri petutor AI",
+    "The AI Petutor is a trained learning model designed to provide teaching and guidance": "Il Petutor AI è un modello di apprendimento addestrato progettato per fornire insegnamento e orientamento",
+    "Recommended": "Consigliato",
+    "Hello, I'm Ioua": "Ciao, sono Ioua",
+    "With me, you can say whatever you want": "Con me, puoi dire quello che vuoi.",
+    "Hello, I'm Luna": "Ciao, sono Luna",
+    "Do you want to learn how to communicate in an interview?": "Vuoi imparare come comunicare in un'intervista?",
+    "Hello, I'm Ukki": "Ciao, sono Ukki",
+    "Do you want to learn how to communicate in a restaurant?": "Vuoi imparare come comunicare in un ristorante?",
+    "New AI Petutors": "Nuovi petutor AI",
+    "Select a new language to learn": "Seleziona una nuova lingua da imparare",
+    "New language": "Nuova lingua",
+    "You are {value}% closer to becoming fluent": "Sei al {value}% più vicino a diventare fluente",
+    "Shortly": "A breve",
+    "Soon, I will be able to share knowledge about history with you": "Presto sarò in grado di condividere con te conoscenze sulla storia.",
+    "In due course, I will be available to share knowledge about technology with you": "A tempo debito, sarò disponibile a condividere con te conoscenze sulla tecnologia."
 }
