--- a/locales/pt.json
+++ b/locales/pt.json
@@ -176,5 +176,29 @@
     "Annual goal: 5000 words, 400 remaining": "Meta anual: {words} palavras, faltam {remaining} palavras",
     "Words you have already encountered": "Palavras que você já encontrou",
     "Monthly goal: 400 words, 200 remaining": "Meta mensal: {words} palavras, faltam {remaining} palavras",
-    "Today's goal: 14 words, 0 remaining": "Meta de hoje: {words} palavras, faltam {remaining} palavras"
+    "Today's goal: 14 words, 0 remaining": "Meta de hoje: {words} palavras, faltam {remaining} palavras",
+    "Progress towards fluency": "Progresso em direção à fluência",
+    "Welcome!! {userFullName}": "Bem-vindo!! {userFullName}",
+    "Continue where you left off?": "Continuar de onde você parou?",
+    "Your performance": "Seu desempenho",
+    "Words with a score above or equal to 95 are represented in <g>green</g>": "Palavras com pontuação acima ou igual a 95 são representadas em <g>verde</g>",
+    "Words with a score of 50 points or more but less than 95 points are represented in <y>yellow</y>": "Palavras com pontuação de 50 pontos ou mais, mas menos de 95 pontos são representadas em <y>amarelo</y>",
+    "Words with a score between 0 and 49 points are represented in <r>red</r>": "Palavras com pontuação entre 0 e 49 pontos são representadas em <r>vermelho</r>",
+    "Earn points by talking to the petutors": "Ganhe pontos conversando com os petutors",
+    "Our AI Petutors": "Nossos Petutors AI",
+    "The AI Petutor is a trained learning model designed to provide teaching and guidance": "O Petutor AI é um modelo de aprendizado treinado projetado para fornecer ensino e orientação",
+    "Recommended": "Recomendado",
+    "Hello, I'm Ioua": "Olá, eu sou Ioua",
+    "With me, you can say whatever you want": "Comigo, você pode dizer o que quiser",
+    "Hello, I'm Luna": "Olá, eu sou Luna",
+    "Do you want to learn how to communicate in an interview?": "Você quer aprender a se comunicar em uma entrevista?",
+    "Hello, I'm Ukki": "Olá, eu sou Ukki",
+    "Do you want to learn how to communicate in a restaurant?": "Você quer aprender a se comunicar em um restaurante?",
+    "New AI Petutors": "Novos Petutors AI",
+    "Select a new language to learn": "Selecione um novo idioma para aprender",
+    "New language": "Novo idioma",
+    "You are {value}% closer to becoming fluent": "Você está {value}% mais perto de se tornar fluente",
+    "Shortly": "Em breve",
+    "Soon, I will be able to share knowledge about history with you": "Em breve, poderei compartilhar conhecimentos sobre história com você",
+    "In due course, I will be available to share knowledge about technology with you": "Em breve, estarei disponível para compartilhar conhecimentos sobre tecnologia com você"
 }
