improve: add word list to profile

--- a/locales/en.json
+++ b/locales/en.json
@@ -199,6 +199,23 @@
   "New language": "New language",
   "You are {value}% closer to becoming fluent": "You are {value}% closer to becoming fluent",
   "Shortly": "Shortly",
+  "scores": "scores",
   "Soon, I will be able to share knowledge about history with you": "Soon, I will be able to share knowledge about history with you.",
-  "In due course, I will be available to share knowledge about technology with you": "In due course, I will be available to share knowledge about technology with you."
+  "In due course, I will be available to share knowledge about technology with you": "In due course, I will be available to share knowledge about technology with you.",
+  "Your average score is {points} points": "Your average score is {points} points",
+  "See more": "See more",
+  "We noticed that you still don't have a plan": "We noticed that you still don't have a plan",
+  "Learn other languages": "Learn other languages",
+  "Set a new system language": "Set a new system language",
+  "Return to dashboard": "Return to dashboard",
+  "Disabled": "Disabled",
+  "To create a plan": "To create a plan",
+  "Green": "Green",
+  "Red": "Red",
+  "Yellow": "Yellow",
+  "Words that you had contact with": "Words that you had contact with",
+  "Word": "Word",
+  "Times used": "Times used",
+  "Status": "Status",
+  "Scoring": "Scoring"
 }
