feat: add typebot bubble

--- a/locales/en.json
+++ b/locales/en.json
@@ -217,5 +217,6 @@
   "Word": "Word",
   "Times used": "Times used",
   "Status": "Status",
-  "Scoring": "Scoring"
+  "Scoring": "Scoring",
+  "Do you have any doubts?": "Do you have any doubts?"
 }
