--- a/locales/es.json
+++ b/locales/es.json
@@ -217,5 +217,6 @@
     "Word": "Palavra",
     "Times used": "Vezes utilizada",
     "Status": "Status",
-    "Scoring": "Avaliação"
+    "Scoring": "Avaliação",
+    "Do you have any doubts?": "¿Tienes alguna duda?"
 }
