--- a/locales/fr.json
+++ b/locales/fr.json
@@ -217,5 +217,6 @@
     "Word": "Mot",
     "Times used": "Utilisé",
     "Status": "Statut",
-    "Scoring": "Score"
+    "Scoring": "Score",
+    "Do you have any doubts?": "Avez-vous des doutes ?"
 }
