--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -217,5 +217,6 @@
     "Word": "Parola",
     "Times used": "Volte utilizzato",
     "Status": "Stato",
-    "Scoring": "Punteggio"
+    "Scoring": "Punteggio",
+    "Do you have any doubts?": "Hai dei dubbi?"
 }
