--- a/locales/pt.json
+++ b/locales/pt.json
@@ -217,5 +217,6 @@
     "Word": "Palavra",
     "Times used": "Quantidade de vezes utilizada",
     "Status": "Status",
-    "Scoring": "Pontuação"
+    "Scoring": "Pontuação",
+    "Do you have any doubts?": "Você tem alguma dúvida?"
 }
