--- a/locales/es.json
+++ b/locales/es.json
@@ -213,10 +213,20 @@
     "Green": "Verde",
     "Red": "Rojo",
     "Yellow": "Amarillo",
-    "Words that you had contact with": "Palavras com as quais você entrou em contato",
-    "Word": "Palavra",
-    "Times used": "Vezes utilizada",
-    "Status": "Status",
-    "Scoring": "Avaliação",
-    "Do you have any doubts?": "¿Tienes alguna duda?"
+    "Do you have any doubts?": "¿Tienes alguna duda?",
+    "Worst scores": "Las peores puntuaciones",
+    "Lastest words": "Últimas palabras",
+    "Words": "Palabras",
+    "Search your word": "Buscar tu palabra",
+    "Sort by worst scores": "Ordenar por las peores puntuaciones",
+    "Here are all the words you learned with us, feel free to explore": "Aquí están todas las palabras que aprendiste con nosotros, siéntete libre de explorar",
+    "The word with the lowest score is \"{lowestScoringWord}\" Would you like to improve that score?": "La palabra con la puntuación más baja es \"{lowestScoringWord}\". ¿Quisieras mejorar esa puntuación?",
+    "Learn word": "Aprender palabra",
+    "To improve your score, you should practice your pronunciation": "Para mejorar tu puntuación, deberías practicar tu pronunciación.",
+    "You've already pronounced this word {wordCount} time(s)": "Ya has pronunciado esta palabra {wordCount} vez(es).",
+    "Words that you had contact with": "Las palabras con las que has tenido contacto",
+    "Word": "Palabra",
+    "Times used": "Veces usadas",
+    "Status": "Estado",
+    "Scoring": "Puntuación"
 }
